--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "code": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:server": "nodemon index.js --ignore '../client/'",
+    "start:client": "npm run serve --prefix '../client/'",
+    "dev": "concurrently \"npm run start:server\" \"npm run start:client\""
   },
   "author": "",
   "license": "ISC",
@@ -14,12 +15,12 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
-    "express": "^4.18.2",
+    "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.1.0",
+    "mongodb": "^6.4.0",
     "mongoose": "^7.5.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.1.0"
   }
 }
